--- a/style.css
+++ b/style.css
@@ -47,16 +47,41 @@ footer {
   height: 100px;
   background-color: darkgray;
 }
-#feat-sect-banner {
-    max-width: 480px;
-}
-p {
+
+div {
     position: relative;
     bottom: 400px;
     left: 510px;
     max-width: 450px;
     overflow-y: scroll;
     height: 400px;
+    font-size: 1.2em;
 }
 
+div h2 {
+  font-size: 1.2em;
+  margin-bottom: .6em;
+  font-weight: bold;
+}
+
+button {
+  display: block;
+  margin-top: .6em;
+  margin-bottom: .5em;
+  padding: 5px;
+  width: 30%;
+  border-radius: 5px;
+  font-size: 1em;
+  background-color: lightgrey;
+  transition: background-color 380ms;
+}
+
+button:hover {
+  background-color: darkgray;
+  cursor: pointer;
+}
+
+section:last-of-type ul {
+  max-width: 480px;
+}
 
