--- a/style.css
+++ b/style.css
@@ -19,6 +19,7 @@ nav ul {
   display: flex;
   justify-content: space-evenly;
   align-items: center;
+  margin-top: 2px;
 }
 main {
   width: 100vw;
@@ -48,7 +49,7 @@ footer {
   background-color: darkgray;
 }
 
-div {
+article {
     position: relative;
     bottom: 400px;
     left: 510px;
@@ -58,7 +59,7 @@ div {
     font-size: 1.2em;
 }
 
-div h2 {
+article h2 {
   font-size: 1.2em;
   margin-bottom: .6em;
   font-weight: bold;
